--- a/API/package.json
+++ b/API/package.json
@@ -11,26 +11,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon -r dotenv/config server.js dotenv_config_path=.env"
+    "dev": "nodemon -r dotenv/config server.js dotenv_config_path=.env",
+    "lint": "eslint --cache *.js && prettier --write *.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^8.2.0",
     "eslint": "^7.23.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --cache",
-      "prettier --write"
-    ]
   }
 }
