--- a/API/package.json
+++ b/API/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.6.0",
     "helmet": "^4.4.1"
