Use Firebase to create user

--- a/web/package.json
+++ b/web/package.json
@@ -38,7 +38,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "globals": {
+      "firebase": "readonly"
+    }
   },
   "browserslist": {
     "production": [
