--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,21 +16,12 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss}'"
   },
   "eslintConfig": {
     "extends": [
