--- a/API/package.json
+++ b/API/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "14.15.x"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
